--- a/ch03-optimization/index.qmd
+++ b/ch03-optimization/index.qmd
@@ -1,22 +1,10 @@
----
-title: "Chapter 3: Optimization"
-format:
-  pdf:
-    documentclass: article
-    number-sections: true
-    pdf-engine: lualatex
-    geometry:
-      - top=30mm
-      - left=25mm
-      - right=25mm
-      - bottom=30mm
----
+# Optimization {.unnumbered}
 
-# Optimization
+This part covers optimization theory, with a focus on problems that leverage linear algebraic structure.
 
-This chapter covers optimization theory, with a focus on problems that leverage linear algebraic structure.
+## Overview
 
-In this chapter, we will explore:
+In this part, we will explore:
 
 - **Convex Optimization**: Theory and algorithms for convex problems
 
@@ -24,9 +12,9 @@ In this chapter, we will explore:
 
 Optimization is central to machine learning, operations research, control theory, and many other fields. Linear algebra provides both the language for formulating optimization problems and the tools for solving them efficiently.
 
-## Connection to Previous Chapters
+## Connection to Previous Parts
 
-The spectral theory from Chapter 2 plays a crucial role in:
+The spectral theory from Part II plays a crucial role in:
 
 - Analyzing the convergence of optimization algorithms
 - Understanding the geometry of quadratic functions
