--- a/ch02-spectral-theory/01-eigenvalues.qmd
+++ b/ch02-spectral-theory/01-eigenvalues.qmd
@@ -1,26 +1,39 @@
 ---
-title: "2.1 Eigenvalues and Eigenvectors"
+chapter-number: 3
+filters:
+  - chapter-number
 format:
   pdf:
-    documentclass: article
+    documentclass: memoir
+    classoption: [12pt, letterpaper, oneside]
     number-sections: true
     pdf-engine: lualatex
-    geometry:
-      - top=30mm
-      - left=25mm
-      - right=25mm
-      - bottom=30mm
+    geometry: [top=30mm, left=25mm, right=25mm, bottom=30mm]
+    include-in-header:
+      text: |
+        \usepackage[quartoenv]{../assets/book-template}
+        \def\R{\mathbb{R}}
+        \def\C{\mathbb{C}}
+        \def\N{\mathbb{N}}
+        \def\bx{\mathbf{x}}
+        \def\by{\mathbf{y}}
+        \def\bu{\mathbf{u}}
+        \def\bv{\mathbf{v}}
+        \def\bA{\mathbf{A}}
+        \def\bI{\mathbf{I}}
+        \def\norm#1{\left\lVert#1\right\rVert}
+        \def\trace{\text{tr}}
 ---
 
 {{< include ../_common.qmd >}}
 
-## Eigenvalues and Eigenvectors
+# Eigenvalues and Eigenvectors
 
-### Introduction
+## Introduction
 
 Eigenvalues and eigenvectors reveal the intrinsic properties of linear transformations. They tell us about the directions in which a transformation acts by simple scaling.
 
-### Definitions
+## Definitions
 
 ::: {#def-eigenvalue}
 ## Eigenvalue and Eigenvector
@@ -40,7 +53,7 @@ $$
 The eigenvalues of $\bA$ are the roots of $p(\lambda)$.
 :::
 
-### Properties
+## Properties
 
 ::: {#thm-symmetric-real}
 ## Real Eigenvalues of Symmetric Matrices
@@ -60,7 +73,7 @@ But also $\bar{\bv}^\top \bA \bv = \bar{\bv}^\top (\lambda \bv) = \lambda \norm{
 Thus $\lambda = \bar{\lambda}$, so $\lambda \in \R$.
 :::
 
-### Exercises
+## Exercises
 
 ::: {#exr-trace-det}
 ## Trace and Determinant
